--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,7 @@ body {
 
 .social-link img {
 	width: 20px;
+	height: 20px;
 }
 
 #about {
@@ -70,6 +71,7 @@ body {
 .picture img {
 	width: 100%;
 	height: 100%;
+
 
 }
 #about-me {
@@ -102,7 +104,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
